--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ publishDir = "docs"
   description = "Describe your website"
   copyright = ""
   sidebarAbout = [
-    "Lorem ipsum dolor sit amet, pri no meliore vivendum iudicabit, eum augue nulla decore in, everti erroribus pri ex. Quo esse populo petentium eu, nam ea iusto discere. "
+    "I'm a customer experience specialist with more than 8 years experinece in managing complex projects as part of corporate as well as startup environments working on both consumer and business facing products"
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
